Eject party-size-to-meq-budget table

--- a/public/locales/en/calculator.json
+++ b/public/locales/en/calculator.json
@@ -1,10 +1,15 @@
 {
   "title": "Battle Budget Calculator",
-  "form-players-label": "Number of Player Characters: {{players}}",
+  "encounter-rules-info": "<rules-link>Rules for building encounters can be found here.</rules-link>",
   "form-level-label": "Party Level: {{level}}",
   "form-daily-battles-label": "Battles before Full Heal-up: {{battles}}",
-  "budget": "Budget for a standard battle:",
-  "encounter-rules-info": "<rules-link>Rules for building encounters can be found here.</rules-link>",
+  "budget-header": "Monster Budget",
+  "budget-players-header": "Party Size",
+  "budget-players-cell-single": "1 Hero",
+  "budget-players-cell": "{{n}} Heroes",
+  "budget-monsters-header": "Monster Equivalents",
+  "budget-monsters-cell": "{{n}} MEQ",
+  "table-header": "Monster Equivalents",
   "budgetresult_one": "{{count}} Monster Equivalent",
   "budgetresult_other": "{{count}} Monster Equivalents",
   "monsterlevel": "Monster level",
